# xYx

./: .env  .gitignore  .sqls.yml  Cargo.toml  README.md  restart.sh  test.http  test.sql
authorization/: Cargo.toml  application.env  application.properties  application.yml
authorization/migrations/: 20221011091606_sys_client.sql  20221011091610_sys_user.sql  20221011091613_sys_token.sql  20221018072858_sys_user_info.sql  20221111073838_init.sql
authorization/src/: lib.rs  main.rs  router.rs
authorization/src/controller/: authorize.rs  authorize_controller.rs  client_controller.rs  mod.rs  token_controller.rs  user_controller.rs
authorization/src/domain/: authorize_domain.rs  client_domain.rs  mod.rs
authorization/src/dto/: authorize_dto.rs  client_dto.rs  mod.rs  token_dto.rs
authorization/src/dto/request/: authorize_requests.rs  client_requests.rs  mod.rs  token_requests.rs  user_requests.rs
authorization/src/dto/response/: client_responses.rs  mod.rs  token_responses.rs  user_responses.rs
authorization/src/entity/: client.rs  mod.rs  token.rs  user.rs
authorization/src/handler/: authorize_handler.rs  client_handler.rs  mod.rs  token_handler.rs
authorization/src/po/: client.rs  token.rs
authorization/src/repository/: authen.rs  client_repository.rs  mod.rs  token_repository.rs  user_repository.rs
authorization/src/service/: authen.rs  authen_service.rs  authorize_service.rs  client_service.rs  mod.rs  token_service.rs  user_service.rs
authorization/src/traits/: authen_traits.rs  mod.rs  user_traits.rs
authorization/src/vo/: client_vo.rs  mod.rs  token_vo.rs
framework/xyx-core/: Cargo.toml
framework/xyx-core/src/: connection_pool.rs  errors.rs  lib.rs
framework/xyx-core/src/service/: defualt_sucurity_service.rs
framework/xyx-core/src/traits/: mod.rs
framework/xyx-core/src/traits/oauth2/: security.rs  token.rs
framework/xyx-core/src/traits/users/: repository.rs  service.rs
migrations/: 20221111040210_init.down.sql  20221111055006_sys_user.down.sql  20221111055006_sys_user.up.sql  20221111140210_init.down.sql  20221111140210_init.up.sql  20221111140230_sys_client.down.sql  20221111140230_sys_client.up.sql  20221111140238_sys_token.down.sql  20221111140238_sys_token.up.sql  20221112055006_sys_user.down.sql  20221112055006_sys_user.up.sql  20221112055055_sys_user_info.down.sql  20221112055055_sys_user_info.up.sql  20221114073537_sys_user_account.down.sql  20221114073537_sys_user_account.up.sql  20221114082428_user_group.down.sql  20221114082428_user_group.up.sql  20221114082518_user_user_gourp.down.sql  20221114082518_user_user_gourp.up.sql  (+17 more)
user-resources/: Cargo.toml  application.env  application.yml
user-resources/migrations/: 20221025072739_sys_user.sql  20221025072805_user_info.sql
user-resources/src/: application.rs  db_pool.rs  lib.rs  main.rs  router.rs  service_register.rs
user-resources/src/controller/: mod.rs  user.rs  user_controller.rs  users_controller.rs
user-resources/src/domain/: mod.rs  role_domian.rs  user_domain.rs  user_group_domain.rs
user-resources/src/dto/: mod.rs  permission_dto.rs  role_dto.rs  role_permission_group_dto.rs  user_dto.rs  user_gourp_dto.rs
user-resources/src/dto/request/: mod.rs
user-resources/src/dto/response/: mod.rs
user-resources/src/entities/: mod.rs  permission.rs  roles.rs  user_roles.rs
user-resources/src/entity/: mod.rs  permission.rs  role.rs  user.rs  user_group.rs  user_info.rs
user-resources/src/handler/: mod.rs  permission_handler.rs  role_group_handler.rs  role_handler.rs  role_permission_group_handler.rs  user_group_handler.rs  user_handler.rs  users_handler.rs
user-resources/src/po/: mod.rs  permission.rs  role.rs  role_permission_group.rs  user.rs  user_group.rs
user-resources/src/repository/: mod.rs  permission_repository.rs  permission_type_repository.rs  role_group_repository.rs  role_permission_group_repository.rs  role_repository.rs  user.rs  user_group_repository.rs  user_group_role_repository.rs  user_repository.rs  user_role_repository.rs  user_user_group_repository.rs
user-resources/src/service/: mod.rs  permission_service.rs  role_group_service.rs  role_permission_group_service.rs  role_service.rs  user.rs  user_group_service.rs  user_service.rs  user_user_group_service.rs
user-resources/src/traits/: mod.rs  user_traits.rs
user-resources/src/vo/: mod.rs  permission_vo.rs  role_group_vo.rs  role_permission_vo.rs  role_vo.rs  user_group_vo.rs  user_vo.rs
x-framework/x-common/: Cargo.toml
x-framework/x-common/src/: error.rs  errors.rs  lib.rs
x-framework/x-common/src/entities/: user.rs
x-framework/x-common/src/model/: authorize.rs  mod.rs  page.rs  param.rs  response.rs
x-framework/x-common/src/models/: mod.rs  page.rs  ping.rs  response.rs
x-framework/x-common/src/traits/authen/: mod.rs  security.rs  token.rs
x-framework/x-common/src/utils/: code.rs  date.rs  defualt_sucurity_utils.rs  defualt_token_utils.rs  mod.rs  string.rs  sucurity.rs  token.rs  tree.rs  vector.rs
x-framework/x-common/src/utils/utils/: defualt_sucurity_utils.rs  defualt_token_utils.rs  mod.rs
x-framework/x-core/: Cargo.toml
x-framework/x-core/src/: application.rs  config.rs  connection_pool.rs  constant.rs  errors.rs  layer.rs  lib.rs
x-framework/x-core/src/entity/: user.rs
x-framework/x-core/src/extractors/: optional_authentication.rs  required_authentication.rs  validation.rs
x-framework/x-core/src/handlers/: http_time_out.rs  metrics.rs  mod.rs
x-framework/x-core/src/middleware/: authentication.rs  authorize.rs  mod.rs
x-framework/x-core/src/middleware/functions/: metrics.rs  mod.rs
x-framework/x-core/src/service/: defualt_token_service.rs  mod.rs
x-framework/x-core/src/traits/: into_extractor.rs  mod.rs  security.rs  token.rs
x-framework/x-core/src/traits/authen/: mod.rs  repository.rs  security.rs  service.rs  token.rs
x-framework/x-core/src/traits/oauth2/: authen.rs  mod.rs
x-framework/x-core/src/traits/users/: mod.rs  repository.rs  service.rs
xyx-authorization/: Cargo.toml
xyx-userresources/: Cargo.toml
(+106 files in other folders)
