[package]
name = "authorization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

x-core = { path = "../x-framework/x-core/" }
x-common = { path = "../x-framework/x-common/" }
x-domain = { path = "../x-framework/x-domain/" }

sqlx = { version = "^0", features = ["runtime-tokio-rustls", "postgres", "time"] }
tokio = { version = "^1", features = ["full"] }
axum = "^0"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"

http = "0.2"
http-body = "0.4.3"
