[package]
name = "authorization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

x-core = { path = "../x-framework/x-core/" }
x-common = { path = "../x-framework/x-common/" }

sqlx = { version = "^0", features = ["runtime-tokio-rustls", "postgres", "time"] }
tokio = { version = "^1", features = ["full"] }
axum = "^0"

validator = { version = "0.15", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
time = { version = "^0" }
anyhow = "^1"
async-trait = "^0.1"
serde_with = { version = "^2", features = ["time_0_3"] }

