[package]
name = "user-resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x-core = { path = "../x-framework/x-core/" }
x-common = { path = "../x-framework/x-common/" }
x-domain = { path = "../x-framework/x-domain/" }

sqlx = { version = "^0", features = ["runtime-tokio-rustls", "postgres", "time"] }
tokio = { version = "^1", features = ["full"] }
axum = "^0"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "1"
async-trait = "0.1"
lazy_static = "1.4"

dotenv = "0.15.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

metrics = "0.18"
metrics-exporter-prometheus = "0.8"
clap = { version = "^3", features = ["derive"] }

http = "0.2"
http-body = "0.4.3"

# tower crates for HTTP middleware
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.3", features = ["trace", "cors"] }
