[package]
name = "xyx-userresources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xyx-core = { path = "../framework/xyx-core/" }
xyx-common = { path = "../framework/xyx-common/" }
xyx-domain = { path = "../framework/xyx-domain/" }

sqlx = { version = "^0", features = ["runtime-tokio-rustls", "postgres", "time"] }
anyhow = "1"
