[package]
name = "xyx-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xyx-common = { path = "../xyx-common/" }
xyx-domain = { path = "../xyx-domain/" }

# axum HTTP dependencies
tokio = { version = "^1", features = ["full"] }
axum = "^0"

# utilty crates
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "^0", features = ["runtime-tokio-rustls", "postgres", "time"] }
serde_json = "1.0.81"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
validator = { version = "0.15", features = ["derive"] }
async-trait = "0.1"
thiserror = "1"
rust-argon2 = "1.0"
clap = { version = "3", features = ["derive", "env"] }
mockall = "0.11.1"
time = "^0.3"
