[package]
name = "x-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

validator = { version = "0.15", features = ["derive"] }
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rs-snowflake = { version = "0.5" }
chrono = { version = "0.4" }
serde = { version = "^1.0", features = ["derive"] }
time = { version = "^0.3" }
wasm-bindgen = "0.2"
