[package]
name = "x-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0"
sqlx = { version = "^0", features = ["runtime-tokio-rustls", "postgres", "time"] }

# utilty crates
serde_json = "^1"
serde = { version = "^1.0", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }

lazy_static = "1.4.0"
jsonwebtoken = "8"

uuid = { version = "0.8", features = ["serde", "v4"] }
rs-snowflake = { version = "^0.5" }

chrono = { version = "0.4" }
time = { version = "^0.3" }

# 加密
rust-argon2 = "^1.0"

# wasm-bindgen = "0.2"

anyhow = "^1"
thiserror = "^1"
