[package]
name = "x-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x-common = { path = "../x-common/" }

# axum HTTP dependencies
# tokio = { version = "^1", features = ["full"] }
axum = "^0"
sqlx = { version = "^0", features = ["runtime-tokio-rustls", "postgres", "time"] }

# utilty crates
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# jsonwebtoken = "8"
dotenv = "^0"

tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }

anyhow = "^1"
validator = { version = "0.15", features = ["derive"] }
async-trait = "0.1"
# thiserror = "1"
# rust-argon2 = "1.0"
clap = { version = "^3", features = ["derive", "env"] }
# mockall = "0.11.1"
time = "^0.3"

metrics = "^0"
metrics-exporter-prometheus = "^0"

lazy_static = "1.4"

http = "^0.2"
http-body = "^0.4"
hyper = "^0"

# tower crates for HTTP middleware
tower = { version = "^0.4", features = ["timeout"] }
tower-http = { version = "^0.3", features = ["trace", "cors", "auth"] }
